# rnet-inference

./: .env.example  Cargo.toml  Makefile  README.md  spec.md
.github/workflows/: ci.yaml
core/: Cargo.toml
core/src/: lib.rs
core/src/agent/: tools.rs
core/src/p2p/: mod.rs  node.rs  service.rs
examples/agentic/: Cargo.toml
examples/inference/: Cargo.toml
examples/raw/: Cargo.toml
examples/raw/src/: main.rs
inode/: Cargo.toml
inode/src/: lib.rs
inode/src/agent/: tools.rs
inode/src/common/: mod.rs
inode/src/p2p/: cmds.rs  mod.rs  node.rs  service.rs  types.rs
inode/src/slm/: core.rs
logs/: chores.md
