[workspace]
members = ["examples/inference", "core"]


resolver = "2"

[workspace.package]
rust-version = "1.90.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rsa = { version = "0.9.8", features = ["sha2"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
unsigned-varint = "0.7"
prost = "0.13"
x25519-dalek = "2"
chacha20poly1305 = { version = "0.10.1" }

[workspace.lints]
clippy.pedantic = { level = "allow", priority = -1 }
clippy.unnecessary_wraps = "warn"
